config/network-policy/ingress/allow-metrics-traffic.yaml
# This NetworkPolicy allows ingress traffic to gather data from the metrics
# endpoint of the controller manager.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-traffic
  namespace: system
  labels:
    app.kubernetes.io/name: virt-import
    app.kubernetes.io/managed-by: kustomize
    kubevirt.io: virt-import-allow-metrics-traffic
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: virt-import
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8443
        protocol: TCP
